Make lein work on JDK 11